fix:: fix role service device
